add sms cases